# Open-Transactions

./: configure.ac
include/otlib/: OTWallet.h
src/: Makefile.am
src/otapi/: Makefile.am
src/otlib/: Makefile.am
src/unittestboost/: Makefile.am  boost_test.cpp  test.cpp
src/unittests/: Makefile.am  test.cpp
